bg position & Kazma fixed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <section>
+      <article>
         <img id="cookie" src="./res/img/kazma.png" alt="Cookie" />
         <p id="counter">Počet Kazmitchů: 0</p>
+      </article>
     </section>
     <script src="./res/js/main.js"></script>
   </body>
