--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <article id="upgrades">
        
         <div class="buttons"> <img class="nadpis" src="./res/img/header-logo.svg" alt=""></img>
-          <button class="button koste" id="clickUprgrade"></button>
-          <p id="upgradetxt buttxt">Buy koště: 50 (zvýší sílu kliknutí o 1)</p>
+          <img src="./res/img/koste.png" alt="" id="clickUprgrade" class="koste">
+          <p id="upgradeTxt buttxt">Buy koště: 50 (zvýší sílu kliknutí o 1)</p>
           <button class="button hasa" id="counterautoclickerUprgade"></button>
-          <p id="upgradetxt2 buttxt">Buy Háša: 100 (+1 kliknutí za sekundu)</p>
+          <p id="upgradeTxt2 buttxt">Buy Háša: 100 (+1 kliknutí za sekundu)</p>
           <button class="button markus" id="counterautoclickerUprgade2"></button>
-          <p id="upgradetxt3 buttxt">Buy Markus: 500 (+10 kliknutí za sekundu)</p>
+          <p id="upgradeTxt3 buttxt">Buy Markus: 500 (+10 kliknutí za sekundu)</p>
         </div>
       </article>
     </section>
