--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
         <div class="char">
           <img src="./res/img/OMSnadace.png" alt="">
           <button class="charita" id="charita">Přispěj na OMS nadaci: 10 000</button>
+          <p id="nadace">Na ONEMANSHOW FOUNDNADATION jsi přispěl celkem 0X</p>
+        </div>
+        <div class="fotky">
+          <div>
+          <button id="img1"></button>
+          <p>Koupit za 1000</p>
+          <button id="img2"></button>
+          <p>Koupit za 10 000</p>
+        </div>
+          <div>
+          <button id="img3"></button>
+          <p>Koupit za 100 000</p>
+          <button id="img4"></button>
+          <p>Koupit za<br>1 000 000</p>
+        </div>
         </div>
       </article>
       <article>
@@ -23,12 +38,12 @@
       <article id="upgrades">
        
         <div class="buttons"> <img class="nadpis" src="./res/img/header-logo.svg" alt=""></img>
-          <img src="./res/img/koste.png" alt="" id="clickUprgrade" class="koste">
-          <p id="upgradeTxt buttxt">Buy koště: 50 (zvýší sílu kliknutí o 1)</p>
+          <button class="button koste" id="clickUprgrade"></button>
+          <p id="upgradeTxt">Buy koště: 50 (zvýší sílu kliknutí o 1)</p>
           <button class="button hasa" id="counterautoclickerUprgade"></button>
-          <p id="upgradeTxt2 buttxt">Buy Háša: 100 (+1 kliknutí za sekundu)</p>
+          <p id="upgradeTxt2">Buy Háša: 100 (+1 kliknutí za sekundu)</p>
           <button class="button markus" id="counterautoclickerUprgade2"></button>
-          <p id="upgradeTxt3 buttxt">Buy Markus: 500 (+10 kliknutí za sekundu)</p>
+          <p id="upgradeTxt3">Buy Markus: 500 (+10 kliknutí za sekundu)</p>
         </div>
       </article>
     </section>
